[package]
name = "whale"
version = "0.1.0"
authors = ["Robert Yi <robert@dataframe.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2"
lazy_static = "1.4.0"
names = "0.10.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.0.0"
skim = "0.8.2"
termion = "1.5.5"
tui = "0.12.0"
